--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enhance-generator",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Enhance GeneratorFunction with mutation and desigion-making methods",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,6 +13,7 @@
   },
   "keywords": [
     "Enhance",
+    "generator enhance",
     "GeneratorFunction",
     "Generator",
     "Iterator",
