--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "types": "dist/index.d.ts",
   "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha",
     "dev": "nodemon --watch src/ --ext ts --exec 'tsc && node dist/index.js'",
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build && npm test",
+    "watch-coverage": "http-server ./coverage/lcov-report"
   },
   "keywords": [
     "Enhance",
@@ -35,7 +36,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.11.2",
-    "nodemon": "^2.0.4"
+    "chai": "^4.3.0",
+    "http-server": "^0.12.3",
+    "mocha": "^8.3.0",
+    "nodemon": "^2.0.4",
+    "nyc": "^15.1.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
+  }
 }
